syntax = "proto3";

option csharp_namespace = "Protos.Actions.CreateAction";

package createaction;

import "google/type/datetime.proto";
import "google/type/latlng.proto";

message CreateActionRequest {
  string TypeId = 1;
  string Name = 2;
  string Description = 3;
  string ContactMail = 4;
  TermDto Term = 5;
  AddressDto Address = 6;
  repeated CheckpointDto Checkpoints = 7; 
  repeated RaceDto Races = 8;
  ActionSaleDto Sale = 9;
}

message CheckpointDto {
  string Name = 1;
  google.type.LatLng Position = 2;
}

message RaceDto {
  string Name = 1;
  double Distance = 2;
  double Incline = 3;
  google.type.DateTime EnteringFrom = 4;
  google.type.DateTime EnteringTo = 5;
  int32 MaxNumberOfCompetitors = 6;
  google.type.DateTime Begin = 7;
  google.type.DateTime End = 8;
  repeated CategoryDto Categories = 9;
  repeated PaymentDefinitionDto Payments = 10;
  LimitsDto Limits = 11;
}

message CategoryDto {
  string Name = 1;
  string Description = 2;
  repeated RacerDto Racers = 3;
}

enum RaceState {
  NotSpecified = 0;
  NotStarted = 1;
  Started = 2;
  Finished = 3;
  DidNotFinished = 4;
  Disqualified = 5;
}

message RacerDto {
  string Id = 1;
  string CompetitorId = 2;
  string FirstName = 3;
  string LastName = 4;
  string Phone = 5;
  string Email = 6;
  repeated PetDto Pets = 7;
  google.type.DateTime Start = 8;
  google.type.DateTime Finish = 9;
  RaceState State = 10;
  bool Accepted = 11;
  bool Payed = 12;
  repeated PaymentDto Payments = 13;
  repeated NoteDto Notes = 14;
  RequestedPaymentsDto RequestedPayments = 15;
  repeated MerchandizeItemDto Merchandize = 16;
  AddressDto Address = 17;
  repeated PassedCheckpointDto PassedCheckpoints = 18;
}

message PassedCheckpointDto {
  string Id = 1;
  google.type.DateTime Passed = 2;
  google.type.LatLng Position = 3;
}

message NoteDto {
  google.type.DateTime Time = 1;
  string Text = 2;
}

message PetDto {
  string Id = 1;
  string UserId = 2;
  string Name = 3;
  string Kennel = 4;
  string Pedigree = 5;
  string Chip = 6;
  google.type.DateTime Birthday = 7;
  google.type.DateTime Decease = 8;
  string UriToPhoto = 9;
  string Contact = 10;
  repeated VaccinationDto Vaccinations = 11;
}

message VaccinationDto {
  google.type.DateTime Date = 1;
  google.type.DateTime ValidUntil = 2;
  VaccinationType Type = 3;
  string UriToPhoto = 4;
  string Note = 5;
}

enum VaccinationType {
  NotValid = 0;
  Rabies = 1; // Vzteklina
  Psinka = 2;
  Parvoviroza = 3;
  HepatitidaContagiosaCanis = 4;
  Leptospiroza = 5;
  Parainfluenza = 6;
  LymskaBorelioza = 7;
  Babesioza = 8;
  PlisnoveInfekce = 9;
  Leishmanioza = 10;
}

message RequestedPaymentsDto {
  string VariableNumber = 1;
  double Sum = 2;
  repeated RequestedPaymentItem Items = 3;
}

message RequestedPaymentItem {
  string Name = 1;
  double Price = 2;
  string Currency = 3;
}

message PaymentDto {
  google.type.DateTime Date = 1;
  double Amount = 2;
  string Currency = 3;
  string BankAccount = 4;
  string Note = 5;
}

message MerchandizeItemDto {
  string Id = 1;
  string Name = 2;
  string Description = 3;
  double Price = 4;
  string Currency = 5;
  string Variant = 6;
  string Size = 7;
  string Color = 8;
  string Note = 9;
  int32 Count = 10;
}

message PaymentDefinitionDto {
  string Id = 1;
  string BankAccount = 2;
  google.type.DateTime From = 3;
  google.type.DateTime To = 4;
  double Price = 5;
  string Currency = 6;
}

message LimitsDto {
  int32 MinimalAgeOfRacerInDayes = 1;
  int32 MinimalAgeOfThePetInDayes = 2;
  bool WithPets = 3;
}

message TermDto {
  google.type.DateTime From = 1;
  google.type.DateTime To = 2;
}

message AddressDto {
  string Country = 1;
  string Region = 2;
  string ZipCode = 3;
  string City = 4;
  string Street = 5;
  google.type.LatLng Position = 6;
}

message ActionSaleDto {
  repeated ActionSaleItemDto Items = 1;
}

message ActionSaleItemDto {
  string Id = 1;
  string Name = 2;
  string Description = 3;
  double Price = 4;
  string Currency = 5;
  repeated string Variants = 6;
  repeated string Sizes = 7;
  repeated string Colors = 8;
}
